nginx/nginx-strip/stripped-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-echo-service
  namespace: services
  annotations:
    nginx.org/rewrites: "serviceName=echo rewrite=/"
spec:
  rules:
  - host: example.foo.com
    http:
      paths:
      - path: /example/
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
  ingressClassName: nginx
